# PerfectTower

./: ConvertFloats  D0S.AsteroidClick  D0S.Asteroid_Claim  D0S.Asteroid_Farm  D0S.Autominer  D0S.AutominerV3  D0S.Crate_Benchmark  D0S.Crates:Benchmark  D0S.Crates:Idler_v2  D0S.Crates_Idler_v2  D0S.DungeonMap  D0S.DustManager  D0S.EraDisable_v1.0  D0S.ExampleMiner  D0S.Idler_Crates  D0S.Idler_Crates_v2  D0S.SimpleSkill  D0S.SuperClick  D0S.Timer  D0S.Timer_Actions  D0S.TurboMiner  Delete_all_scripts  DiggerHead  DiggerMaster  README.md  exotic_sim.html  factory_graph.py  testlib  testlib_test
adventure/: 01-init.tpt2  02-analyze loot.tpt2  06-follow path.tpt2  09-adventure_lib.tpt2  D0S.DungeonMap
auto_trasher/: README.md  auto_trasher.tpt2  trasher_macros.tpt2
benchmarker/: README.md  benchmark_1.tpt2  benchmark_import_lib.tpt2  main.tpt2  turbo.tpt2  turbo_exec.tpt2
dimensions/: .gitignore  Cargo.toml  Makefile  README.md  dimensions.cc
dimensions/src/: lib.rs  main.rs  stub.rs  tests.rs
factory/: 04-recipes.tpt2  D0S.DustManager  D0S.factory.tpt2  D0S.init_factory.tpt2  README.md  complete package.tpt2  count producers.tpt2  count_ingredients.tpt2  count_inventory.tpt2  count_machines.tpt2  count_producers.tpt2  craft producers 1.tpt2  craft producers 2.tpt2  craft producers 3.tpt2  craft.tpt2  craft_machines_1.tpt2  craft_machines_2.tpt2  craft_parts.tpt2  craft_producers_1.tpt2  craft_producers_2.tpt2  craft_producers_3.tpt2  d0s.factory_package.tpt2  d0s.register_factory.tpt2  factory_constants.tpt2  factory_macros.tpt2  factory_package.tpt2  fix_target_typo.tpt2  init.tpt2  launch_factory_craft.tpt2  load_ingredients_ids.tpt2  load_machines_ids.tpt2  load_producers_ids.tpt2  lr.tpt2  main.tpt2  make_craft_tree.tpt2  produce.tpt2  produce_circuits.tpt2  produce_dust.tpt2  produce_holiday.tpt2  produce_misc.tpt2  (+17 more)
finite_infinities/: era.tpt2  load_abilities_ids.tpt2  round_start.tpt2  spam_abilities.tpt2
mine/: DiggerHead.tpt2  DiggerMaster.tpt2
museum/: 00-complete museum.tpt2  (+15 more)
(+54 files in other folders)
