[package]
name = "dimensions"
description = "Utility that duplicates The Perfect Tower II's logic for generating dimensions, letting you find them more efficiently than clicking around."
version = "0.2.0"
edition = "2021"
rust-version = "1.63"

[dependencies]
arrayvec = { version = "0.7.2", features = ["serde"] }
clap = { version = "=4.0.32", features = ["derive", "wrap_help"] }
clap_lex = { version = "=0.3.0" }
indicatif = "0.17.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
