[package]
name = "dimensions"
description = "Utility that duplicates The Perfect Tower II's logic for generating dimensions, letting you find them more efficiently than clicking around."
version = "0.4.0"
edition = "2021"
rust-version = "1.63"

[dependencies]
ahash = "0.8.3"
clap = { version = "=4.0.32", features = ["derive", "wrap_help"] }
clap_lex = { version = "=0.3.0" }
indicatif = "0.17.3"
regex = { version = "1.7.1", default-features = false, features = ["perf", "std"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
tinyvec = { version = "1.6.0", features = ["serde"] }

[profile.release]
lto = "thin"
